--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
     </head>
     <body>
       
-        <div class="header__container">
+        <div class="header">
             <ul class="nav">
-                <li class="nav__basic">Basic/dept&reg;</li>
-                <li class="nav__item">Work</li>
-                <li class="nav__item">About</li>
-                <li class="nav__item">News</li>
-                <li class="nav__item">Thinking</li>
-                <li class="nav__item">Pledge</li>
-                <li class="nav__item">Career</li>
-                <li class="nav__item">contact</li>
+                <li class="logo">Basic/dept&reg;</li>
+                <li class="item">Work</li>
+                <li class="item">About</li>
+                <li class="item">News</li>
+                <li class="item">Thinking</li>
+                <li class="item">Pledge</li>
+                <li class="item">Career</li>
+                <li class="item">contact</li>
                 <li class="nav__dots">
                     <span></span>
                     <span></span>
@@ -124,7 +124,7 @@
         <div class="news">
             <div class="news__item">
                 <div class="news__item--img-container">
-                    <img src="image/news.png" class="news__item--img">
+                    <img src="image/6.png" class="news__item--img">
                 </div>
                 <div class="news__right--container">
                     <div class="news__item--header">
@@ -137,7 +137,7 @@
             <hr>
             <div class="news__item">
                 <div class="news__item--img-container">
-                    <img src="image/news.png" class="news__item--img">
+                    <img src="image/6.png" class="news__item--img">
                 </div>
                 <div class="news__right--container">
                     <div class="news__item--header">
@@ -150,7 +150,7 @@
             <hr>
             <div class="news__item">
                 <div class="news__item--img-container">
-                    <img src="image/news.png" class="news__item--img">
+                    <img src="image/6.png" class="news__item--img">
                 </div>
                 <div class="news__right--container">
                     <div class="news__item--header">
@@ -163,7 +163,7 @@
             <hr>
             <div class="news__item">
                 <div class="news__item--img-container">
-                    <img src="image/news.png" class="news__item--img">
+                    <img src="image/6.png" class="news__item--img">
                 </div>
                 <div class="news__right--container">
                     <div class="news__item--header">
@@ -176,7 +176,7 @@
             <hr>
             <div class="news__item">
                 <div class="news__item--img-container">
-                    <img src="image/news.png" class="news__item--img">
+                    <img src="image/6.png" class="news__item--img">
                 </div>
                 <div class="news__right--container">
                     <div class="news__item--header">
