Fix Footer Error

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                 <h1 class="footer__top--heading">b/d&reg;</h1>
                 <p class="footer__top--paragraph">
                     hello from the other side hello from the other side hello from the other side 
-                    <span class="footer__top--underline">abdowahbah@gmail.com</span>
+                    <span class="footer__top--underline">AhmedMohamed@gmal.com</span>
                 </p>
                 
             </div>
